examples/customization/cafe-ingress-with-annotations.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress-with-annotations
  annotations:
    nginx.org/proxy-connect-timeout: "30s"
    nginx.org/proxy-read-timeout: "20s"
    nginx.org/client-max-body-size: "4m"
    # nginx.org/location-snippets: |
    #     if ($ssl_client_verify = SUCCESS) {
    #         set $auth_basic off;
    #     }
    #     if ($ssl_client_verify != SUCCESS) {
    #         set $auth_basic "Restricted";
    #     }
    #     auth_basic $auth_basic;
    #     auth_basic_user_file "/var/run/secrets/nginx.org/auth-basic-file";
    # nginx.org/server-snippets: |
    #     ssl_verify_client optional;
spec:
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /tea
        backend:
          serviceName: tea-svc
          servicePort: 80
      - path: /coffee
        backend:
          serviceName: coffee-svc
          servicePort: 80
